<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp"
    android:id="@+id/cv_cardView"
    android:layout_margin="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="50dp"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/mainShapeImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagestyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/mainshapeimage" />

        <TextView
            android:id="@+id/mainFirstLetter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mainFistLetter"
            android:textColor="#ffff"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mainShapeImage"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/contactNameId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="18sp" />




</LinearLayout>